:Contact: faltet@pytables.com
:Author: Ivan Vilata i Balaguer
:Contact: ivan@selidor.net


Changes from 2.0.x to 2.1b2
===========================

- When opening a node, that will be done directly, without populating first
  all the parent directories.  So, for opening pre-known group and leaf
  locations, the new code is substantially faster (in fact, the cost is O(1)).

- New File.fileno() added.  This returns the underlying OS file descriptor for
  the file.

- The Atom.dflt is honored now when creating CArrays.  Fixes #176.

- [Pro] A new Table.itersorted() iterator allows to iterate through a table
  following the order of a certain index.  It supports iteration on
  ranges, including negative steps (i.e. reverse sorted order).

- [Pro] New Table.readSorted() method that can read a table following the
  order of a certain index.  It supports the reads on ranges, including
  negative steps (i.e. reverse sorted order).

- [Pro] Now, the copy of the AUTO_INDEX is done only if the `copyuserattrs` in
  Table.copy() is true (the default).

- [Pro] A new `sortby` argument has been added to Table.copy() allowing to a
  Table to be sorted during the copy operation.

- [Pro] New `propindexes` argument in Table.copy().  If true, the indexes in
  the source table are propagated (created) to the new table.  If false (the
  default), the indexes are not propagated.

- [Pro] New public Index.readSorted() and Index.readIndices() that allow
  direct access to an index data.

- [Pro] Added new '--sortby' (sort a table by a column key), '--forceCSI'
  (force the creation of a CSI index) and '--propindexes' (propagate the
  indexes in original tables) flags to the 'ptrepack' utility.

- A new `chunkshape` argument has been added to Leaf.copy() allowing to
  specify a chunkshape.  It can also take the special values 'auto' (compute a
  sensible value) and 'keep' (keep the original value, which is the default).